# KotakNeoTrader

./: .replit  README_LOCAL_SETUP.md  README_WINDOWS_SETUP.md  add_sample_etf_trades.py  admin_signals_scheduler.py  app.py  app_minimal.py  app_new.py  auto_login.py  backup_manager.py  cookies.txt  create_admin_signals.py  create_initial_etf_trades.py  create_sample_etf_data.py  create_sample_signals.py  csv_data_fetcher.py  drop_etf_tables.py  etf_data_scheduler.py  etf_trading_signals.py  export_data.py  import_csv_to_admin_signals.py  import_trading_signals.py  init_trading_db.py  kotak_data_collector.py  kotak_quotes_service.py  local_dev_setup.py  local_setup.sh  local_setup_guide.md  local_setup_windows.bat  main.py  main_minimal.py  models.py  models_etf.py  neo_client.py  notebook_data_fetcher.py  populate_admin_signals.py  populate_demo_data.py  populate_etf_quotes.py  populate_kotak_quotes.py  pyproject.toml  (+14 more)
api/: admin.py  admin_signals_api.py  dashboard.py  deals.py  enhanced_etf_signals.py  etf_signals.py  notifications.py  realtime_quotes.py  signals_datatable.py  supabase_api.py  trading.py
attached_assets/: INVESTMENTS - ETFS-V2_1750140136265.csv  Pasted--STEP-8-Get-Positi-1749491810089_1749491810262.txt  Pasted--venv-PS-C-01-KotakNeoTrader-main-KotakNeoTrader-main-python-main-py-Traceback-most-recent-call-1749891259359_1749891259360.txt  Pasted-Create-a-Python-Flask-web-application-using-Bootstrap-for-the-frontend-The-app-should-integrate-the-1749482042366_1749482042366.txt  kotak-code_1749482077147.ipynb  (+4 more)
config/: settings.py
routes/: auth.py  (+1 more)
(+30 files in other folders)
